Improve par spread for swaps with only one period.